# midimessage-max-external

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.maxpat  license.txt  midimessage.maxpat  package-info.json.in
examples/: Bidirectional 01v96 Remote MIDI Layer Control.maxpat  hex-to-int.js  midimessage.maxpat
help/: midimessage.maxpat
scripts/: object-unittest.cmake  posttarget.cmake  pretarget.cmake
src/midimessage.gen/: CMakeLists.txt  midimessage.gen.cpp
src/midimessage.parse/: CMakeLists.txt  midimessage.parse.cpp
